--- a/3.html
+++ b/3.html
@@ -14,9 +14,7 @@
     <li><a href="1.html">CSS</a></li>
     <li><a href="1.html">JavaScript</a></li>
   </ol>
-
-  <h2>HTML</h2>
-
+  <h2>JavaScript</h2>
   <a href="http://www.naver.com" target="_blank" title="naver">
     네이버 열기
   </a>
