--- a/2.html
+++ b/2.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+
   <h1>WEB</h1>
 
   <ol>
@@ -15,7 +16,7 @@
     <li><a href="1.html">JavaScript</a></li>
   </ol>
 
-  <h2>HTML</h2>
+  <h2>CSS</h2>
 
   <a href="http://www.naver.com" target="_blank" title="naver">
     네이버 열기
