--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <h1>WEB</h1>
+
+  <h1><a href = "index.html">WEB</a></h1>
 
   <ol>
     <li><a href="1.html">HTML</a></li>
@@ -16,7 +17,7 @@
   </ol>
 
   <h2>HTML</h2>
-  
+
   <a href="http://www.naver.com" target="_blank" title="naver">
     네이버 열기
   </a>
